fix: 알고리즘 수정(#26)
